Four section alignment issue

--- a/afterlogin/css/app.css
+++ b/afterlogin/css/app.css
@@ -75,15 +75,15 @@ select{ display:block;}
 .detailedcolumn{width:50%; float:left;}
 .detailedRow .imgSec{width:123px; max-width: 123px; border-right:1px solid #c4c0bb; float:left}
 .detailedRow .imgSec img, .detailSec .tinyImg img{ vertical-align: middle;}
-.detailedRow .detailSec{padding:15px; border-right:1px solid #c4c0bb; position:relative; min-height:122px; float:left; max-width: 300px;}
+.detailedRow .detailSec{padding:15px; border-right:1px solid #c4c0bb; position:relative; min-height:122px; float:left; }
 .detailSec h5{color:#402d33; text-transform:uppercase; padding:0; margin:0; font-size:18px;}
 .detailSec p{color:#694f57; padding:0;margin:0;}
 .detailSec .tinyImg{position:absolute; top:50px; right:-12px;}
-.detailedRow .monthRemain{width:120px; border-right:1px solid #c4c0bb; text-align:center; min-height:122px; float:right}
+.detailedRow .monthRemain{width:120px; border-right:1px solid #c4c0bb; text-align:center; min-height:122px; float:left}
 .monthRemain h5{color:#b27c3b; text-align:center; font-size:16px;}
 .monthRemain h2{color:#b27c3b; text-align:center; padding:0; margin:0; font-size:32px;}
 .detailedRow .rightArrow a{width:20px; max-width: 20px; text-align:center; background-color:#b27c3b; min-height:122px; padding-top:50px; float:right}
-
+.detailedRow .rightArrow{width:20px;float:left;}
 .modal-content{ border-top-left-radius:5px;}
 
 .modalDetail table td{padding: 20px; width:50%; background-color:#eee; }
